# MyParallelAlg

./: CMakeLists.txt  README.md  acc_vs_partsum.cpp  benchmark_scan.cpp  benchmark_scan.hpp  inclusive_scan_2t.cpp  inclusive_scan_chunked.cpp  inclusive_scan_chunked.hpp  inclusive_scan_mt.cpp  inclusive_scan_mt.hpp  inclusive_scan_nt.cpp  partial_sum_2t.cpp  perf_corr.py  pmu.cpp  pmu.hpp  scanplot.py  serial_scan.hpp
